# PDFSaaSDesktopOCR

./: README.md  Taskfile.yml  build.gradle
.github/workflows/: pre_commit.yml  push-docker-base.yml  push-docker.yml  sync_files_v2.yml  (+1 more)
.taskfiles/: electron.yml  ocr.yml
docs/: 1_PLAN.md  2_PLAN.md  3_PLAN.md  4_PLAN.md  5_PLAN.md  6_PLAN.md  7_PLAN.md
frontend/: package-lock.json  package.json
ocr-service/: .gitignore  pyproject.toml
ocr-service/scripts/: golden_diff.py  golden_prepare.py  golden_run.py  start.bat  start.sh
ocr-service/src/pdfsaas_ocr/: __init__.py
ocr-service/src/pdfsaas_ocr/api/: app.py
ocr-service/src/pdfsaas_ocr/api/routes/: __init__.py  ocr.py
ocr-service/src/pdfsaas_ocr/config/: __init__.py  settings.py
ocr-service/src/pdfsaas_ocr/contracts/: __init__.py  health.py  ocr.py
ocr-service/src/pdfsaas_ocr/models/: __init__.py  base.py
ocr-service/src/pdfsaas_ocr/services/: __init__.py  cjk_cleanup.py  golden_compare.py  image_preprocess.py  latin_spacing.py  paddle_adapter.py  paddle_env.py  runtime.py
ocr-service/tests/: test_cjk_cleanup.py  test_golden_cjk.py  test_golden_compare.py  test_golden_e2e.py  test_image_preprocess.py  test_latin_spacing.py  test_paddle_adapter.py  test_routes.py  test_runtime.py
ocr-service/tests/fixtures/golden/: marx_intro_scan_snippet.json
ocr-service/tests/fixtures/golden/e2e/: README.md
ocr-service/tests/fixtures/golden/e2e/marx_intro_scan_snippet/: expected.txt  manifest.json
scripts/: analyze_punct_widths.py  analyze_reference_pdf.py
testing/: allEndpointsRemovedSettings.yml
(+114 files in other folders)
