[project]
name = "pdfsaas-ocr"
version = "0.1.0"
description = "PDFSaaS Desktop OCR — local PaddleOCR inference service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "pillow>=11.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.408",
    "ruff>=0.14.10",
]
paddle = [
    "opencv-python-headless>=4.10.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.0.0",
    "wordninja>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.408",
    "ruff>=0.14.10",
]
paddle = [
    "opencv-python-headless>=4.10.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.0.0",
    "wordninja>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfsaas_ocr"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "BLE"]

[tool.pyright]
pythonVersion = "3.11"
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
